# projeto-extensao-UFMT-LGPD-TCE

./: .~lock.Modelo de relatório.docx#  Modelo de relatório.docx  README.md  Relatório LGPD TCE-MT.md  atividade.md
lgpd-auditor/: .gitignore  README.md  legislation.yaml  pyproject.toml
lgpd-auditor/audits/tce-mt/: audit_results.json  engineering_diary.jsonl  validation_report.json  visited_routes.json
lgpd-auditor/audits/tce-mt/checkpoints/: latest.json
lgpd-auditor/audits/tce-mt/evidence/: index.json
lgpd-auditor/audits/tce-mt/reports/: dashboard.html  relatorio-lgpd-tce-mt.html  relatorio-lgpd-tce-mt.md  sintese-executiva.md  visited_routes.csv
lgpd-auditor/config/: tce-mt.yaml
lgpd-auditor/docs/: arquitetura.md  configuracao.md  guia-de-uso.md
lgpd-auditor/src/lgpd_auditor/: __init__.py  cli.py  export_service.py  finalize_service.py
lgpd-auditor/src/lgpd_auditor/ai_synthesis/: __init__.py  synthesizer.py
lgpd-auditor/src/lgpd_auditor/audit/: __init__.py  models.py  service.py
lgpd-auditor/src/lgpd_auditor/checkpoint/: __init__.py  manager.py
lgpd-auditor/src/lgpd_auditor/config/: __init__.py  loader.py
lgpd-auditor/src/lgpd_auditor/crawler/: __init__.py  robots.py  service.py  url_utils.py  visited_routes.py
lgpd-auditor/src/lgpd_auditor/evidence/: __init__.py  capture_service.py  models.py  ocr_service.py  store.py
lgpd-auditor/templates/report/: relatorio.html.j2  relatorio.md.j2
lgpd-auditor/tests/: test_audit.py  test_crawler.py  test_evidence.py  test_export.py  test_governance.py  test_report.py  test_validation.py
(+593 files in other folders)
