[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lgpd-auditor"
version = "0.1.0"
description = "Auditor de conformidade LGPD para portais institucionais"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "LGPD Auditor Team" }]
dependencies = [
    "playwright>=1.40",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "jinja2>=3.1",
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "psutil>=5.9",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]
ocr = ["pytesseract>=0.3", "Pillow>=10.0"]
pdf = ["weasyprint>=62.0"]

[project.scripts]
lgpd-auditor = "lgpd_auditor.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
